--- a/index.html
+++ b/index.html
@@ -1,1 +1,142 @@
-meganath
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>S. Meganath - Portfolio Resume</title>
+
+<style>
+    body {
+        margin: 0;
+        font-family: Arial, sans-serif;
+        background: #f2f2f2;
+        color: #333;
+    }
+
+    header {
+        background: #2c3e50;
+        color: white;
+        padding: 30px;
+        text-align: center;
+    }
+
+    header h1 {
+        margin: 0;
+        font-size: 32px;
+    }
+
+    header p {
+        margin-top: 5px;
+        font-size: 18px;
+        letter-spacing: 1px;
+    }
+
+    .section {
+        padding: 40px;
+        background: white;
+        margin: 25px auto;
+        width: 80%;
+        border-radius: 8px;
+        box-shadow: 0 0 10px #bbb;
+    }
+
+    h2 {
+        border-left: 5px solid #2c3e50;
+        padding-left: 10px;
+        margin-bottom: 20px;
+        color: #2c3e50;
+    }
+
+    ul {
+        list-style: none;
+        padding: 0;
+    }
+
+    ul li {
+        background: #e6e6e6;
+        padding: 10px;
+        margin: 8px 0;
+        border-radius: 6px;
+    }
+
+    .project {
+        background: #eef3ff;
+        padding: 15px;
+        border-left: 4px solid #2c3e50;
+        margin-bottom: 15px;
+        border-radius: 5px;
+    }
+
+    footer {
+        background: #2c3e50;
+        color: white;
+        text-align: center;
+        padding: 15px;
+        margin-top: 20px;
+    }
+</style>
+
+</head>
+<body>
+
+<header>
+    <h1>S. Meganath</h1>
+    <p>IIIrd Year • B.Tech Information Technology (2023–2027)</p>
+</header>
+
+<div class="section">
+    <h2>About Me</h2>
+    <p>I am a motivated IT student with a passion for web development, programming, and modern technologies. I enjoy creating websites, solving logical problems, and learning new skills every day.</p>
+</div>
+
+<div class="section">
+    <h2>Skills</h2>
+    <ul>
+        <li>HTML & CSS</li>
+        <li>JavaScript Basics</li>
+        <li>Python</li>
+        <li>Java</li>
+        <li>Problem Solving</li>
+    </ul>
+</div>
+
+<div class="section">
+    <h2>Projects</h2>
+    
+    <div class="project">
+        <h3>Typing Speed Test App</h3>
+        <p>A Streamlit-based application that measures typing speed and provides performance results.</p>
+    </div>
+
+    <div class="project">
+        <h3>Student Performance Analyzer</h3>
+        <p>A Python & Streamlit tool to visualize student performance using charts and analytics.</p>
+    </div>
+
+    <div class="project">
+        <h3>Simple Portfolio Website</h3>
+        <p>A responsive personal portfolio created using HTML and CSS.</p>
+    </div>
+</div>
+
+<div class="section">
+    <h2>Education</h2>
+    <ul>
+        <li><b>B.Tech – Information Technology</b><br>Coimbatore Institute of Engineering and Technology (2023–2027)</li>
+        <li>HSC – 2023</li>
+        <li>SSLC – 2021</li>
+    </ul>
+</div>
+
+<div class="section">
+    <h2>Contact</h2>
+    <p><b>Email:</b> smeganath50@gmail.com</p>
+    <p><b>Phone:</b> +91 9080154353</p>
+</div>
+
+<footer>
+    © 2025 S. Meganath • Portfolio Resume
+</footer>
+
+</body>
+</html>
