--- a/index.html
+++ b/index.html
@@ -5,77 +5,130 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>S. Meganath - Portfolio Resume</title>
 
+<!-- Google Font -->
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
 <style>
-    body {
+    * {
         margin: 0;
-        font-family: Arial, sans-serif;
-        background: #f2f2f2;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: "Poppins", sans-serif;
+    }
+
+    body {
+        background: #f5f7fb;
         color: #333;
     }
 
+    /* Header Section */
     header {
-        background: #2c3e50;
+        background: linear-gradient(135deg, #1f3c88, #4a74c9);
         color: white;
-        padding: 30px;
+        padding: 60px 20px;
         text-align: center;
+        box-shadow: 0 5px 15px rgba(0,0,0,0.2);
     }
 
     header h1 {
-        margin: 0;
-        font-size: 32px;
+        font-size: 40px;
+        font-weight: 700;
+        letter-spacing: 1px;
+        animation: fadeIn 1.5s ease;
     }
 
     header p {
-        margin-top: 5px;
         font-size: 18px;
-        letter-spacing: 1px;
+        margin-top: 10px;
+        opacity: 0.9;
     }
 
+    @keyframes fadeIn {
+        from { opacity: 0; transform: translateY(-20px); }
+        to { opacity: 1; transform: translateY(0); }
+    }
+
+    /* Section Styling */
     .section {
+        width: 85%;
+        background: rgba(255,255,255,0.8);
+        backdrop-filter: blur(10px);
+        margin: 30px auto;
         padding: 40px;
-        background: white;
-        margin: 25px auto;
-        width: 80%;
-        border-radius: 8px;
-        box-shadow: 0 0 10px #bbb;
+        border-radius: 12px;
+        box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+        transition: 0.3s;
+    }
+
+    .section:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 15px 30px rgba(0,0,0,0.15);
     }
 
     h2 {
-        border-left: 5px solid #2c3e50;
-        padding-left: 10px;
+        font-size: 26px;
+        color: #1f3c88;
+        border-left: 6px solid #1f3c88;
+        padding-left: 12px;
         margin-bottom: 20px;
-        color: #2c3e50;
+        font-weight: 600;
     }
 
-    ul {
-        list-style: none;
-        padding: 0;
+    /* Skills Grid */
+    .skills-list {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        gap: 15px;
     }
 
-    ul li {
-        background: #e6e6e6;
-        padding: 10px;
-        margin: 8px 0;
-        border-radius: 6px;
+    .skills-list li {
+        background: #e8edff;
+        padding: 12px;
+        border-radius: 8px;
+        font-weight: 500;
+        transition: 0.2s;
     }
 
+    .skills-list li:hover {
+        background: #d8e0ff;
+        transform: translateY(-3px);
+    }
+
+    /* Project Cards */
     .project {
-        background: #eef3ff;
-        padding: 15px;
-        border-left: 4px solid #2c3e50;
-        margin-bottom: 15px;
-        border-radius: 5px;
+        background: #eef2ff;
+        padding: 20px;
+        border-left: 5px solid #1f3c88;
+        border-radius: 8px;
+        margin-bottom: 20px;
+        transition: 0.3s;
+    }
+
+    .project:hover {
+        transform: scale(1.02);
+        background: #e2e6ff;
+    }
+
+    .project h3 {
+        margin-bottom: 8px;
     }
 
     footer {
-        background: #2c3e50;
+        background: #1f3c88;
         color: white;
         text-align: center;
-        padding: 15px;
-        margin-top: 20px;
+        padding: 20px;
+        margin-top: 25px;
+        letter-spacing: 1px;
     }
-</style>
 
+    /* Contact */
+    .contact-info p {
+        font-size: 18px;
+        margin: 10px 0;
+    }
+
+</style>
 </head>
 <body>
 
@@ -86,12 +139,12 @@
 
 <div class="section">
     <h2>About Me</h2>
-    <p>I am a motivated IT student with a passion for web development, programming, and modern technologies. I enjoy creating websites, solving logical problems, and learning new skills every day.</p>
+    <p>I am a passionate IT student interested in building websites, learning new technologies, and creating meaningful software solutions. I focus on clean code, modern design, and logical problem-solving.</p>
 </div>
 
 <div class="section">
     <h2>Skills</h2>
-    <ul>
+    <ul class="skills-list">
         <li>HTML & CSS</li>
         <li>JavaScript Basics</li>
         <li>Python</li>
@@ -102,33 +155,33 @@
 
 <div class="section">
     <h2>Projects</h2>
-    
+
     <div class="project">
         <h3>Typing Speed Test App</h3>
-        <p>A Streamlit-based application that measures typing speed and provides performance results.</p>
+        <p>Streamlit-based app that calculates words per minute and accuracy with real-time typing analysis.</p>
     </div>
 
     <div class="project">
         <h3>Student Performance Analyzer</h3>
-        <p>A Python & Streamlit tool to visualize student performance using charts and analytics.</p>
+        <p>Python + Streamlit tool that visually analyzes student data using charts, graphs, and metrics.</p>
     </div>
 
     <div class="project">
         <h3>Simple Portfolio Website</h3>
-        <p>A responsive personal portfolio created using HTML and CSS.</p>
+        <p>A responsive portfolio highlighting personal skills, projects, and achievements.</p>
     </div>
 </div>
 
 <div class="section">
     <h2>Education</h2>
-    <ul>
+    <ul class="skills-list">
         <li><b>B.Tech – Information Technology</b><br>Coimbatore Institute of Engineering and Technology (2023–2027)</li>
         <li>HSC – 2023</li>
         <li>SSLC – 2021</li>
     </ul>
 </div>
 
-<div class="section">
+<div class="section contact-info">
     <h2>Contact</h2>
     <p><b>Email:</b> smeganath50@gmail.com</p>
     <p><b>Phone:</b> +91 9080154353</p>
